MenuProduct에서 Product로의 직접 참조 제거