@@ -1,29 +1,30 @@
 package kitchenpos.menu.application;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import kitchenpos.menu.application.dto.MenuCreateRequest;
 import kitchenpos.menu.application.dto.MenuResponse;
 import kitchenpos.menu.domain.Menu;
 import kitchenpos.menu.domain.MenuGroupRepository;
 import kitchenpos.menu.domain.MenuProduct;
 import kitchenpos.menu.domain.MenuRepository;
-import kitchenpos.product.domain.ProductRepository;
+import kitchenpos.menu.domain.MenuValidator;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class MenuService {
 
-    private final ProductRepository productRepository;
+    private final MenuValidator menuValidator;
     private final MenuGroupRepository menuGroupRepository;
     private final MenuRepository menuRepository;
 
     public MenuService(
-            ProductRepository productRepository,
+            MenuValidator menuValidator,
             MenuGroupRepository menuGroupRepository,
             MenuRepository menuRepository
     ) {
-        this.productRepository = productRepository;
+        this.menuValidator = menuValidator;
         this.menuGroupRepository = menuGroupRepository;
         this.menuRepository = menuRepository;
     }
@@ -32,13 +33,14 @@ public class MenuService {
     public MenuResponse create(MenuCreateRequest request) {
         List<MenuProduct> menuProducts = request.getMenuProducts()
                 .stream()
-                .map(it -> new MenuProduct(productRepository.getById(it.getProductId()), it.getQuantity()))
-                .toList();
+                .map(it -> new MenuProduct(it.getProductId(), it.getQuantity()))
+                .collect(Collectors.toList());
         Menu menu = new Menu(
                 request.getName(),
                 request.getPrice(),
                 menuGroupRepository.getById(request.getMenuGroupId()),
-                menuProducts
+                menuProducts,
+                menuValidator
         );
         return MenuResponse.from(menuRepository.save(menu));
     }
@@ -47,6 +49,6 @@ public class MenuService {
         return menuRepository.findAll()
                 .stream()
                 .map(MenuResponse::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
